# iced_fonts

./: Cargo.toml
